[package]
name = "cascette-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NGDP/CASC protocol implementation with Ribbit/TACT service discovery and CDN content delivery"
readme = "README.md"
keywords = ["blizzard", "ngdp", "casc", "ribbit", "tact"]
categories = ["network-programming", "game-development", "parsing"]

[features]
default = []
streaming = ["dep:binrw"]

[dependencies]
# Workspace dependencies (available on all platforms)
thiserror = { workspace = true }
binrw = { workspace = true, optional = true }
hex = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true }
md5 = { workspace = true }
prometheus = { workspace = true }
dashmap = { workspace = true }

# V1 MIME support
mail-parser = { workspace = true }
cms = { workspace = true }
der = { workspace = true }
asn1 = { workspace = true }
x509-cert = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
cascette-formats = { version = "0.2.0", path = "../cascette-formats" }
cascette-cache = { version = "0.2.0", path = "../cascette-cache" }
cascette-crypto = { version = "0.2.0", path = "../cascette-crypto" }

reqwest = { workspace = true }
rustls = { workspace = true }

# Browser WASM (wasm32-unknown-unknown) — not WASI
[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
# WASM-compatible reqwest (uses web-sys/fetch API instead of native sockets)
#reqwest = { version = "0.13", default-features = false, features = ["gzip", "brotli", "deflate", "charset"] }
# web-sys for browser APIs (console logging, localStorage for caching)
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }
# wasm-bindgen-futures provides async runtime for WASM
wasm-bindgen-futures = "0.4"
# getrandom 0.4 (from rand 0.10) needs wasm_js for browser crypto
getrandom = { workspace = true, features = ["wasm_js"] }
# getrandom 0.2 (transitive from rsa 0.9) needs js for browser crypto
getrandom_02 = { workspace = true, features = ["js"] }
# js-sys for Date.now() timestamp access
js-sys = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.13"

# Crypto provider for reqwest in tests
rustls = { workspace = true }

# Example binaries
[[example]]
name = "wow_classic_native"
path = "examples/wow_classic_native.rs"

[[example]]
name = "wow_classic_wasm"
path = "examples/wow_classic_wasm.rs"

[[example]]
name = "cdn_protocol_verification"
path = "examples/cdn_protocol_verification.rs"

[[example]]
name = "cdn_chain_verification"
path = "examples/cdn_chain_verification.rs"

[[example]]
name = "dump_product_info"
path = "examples/dump_product_info.rs"

[[example]]
name = "cdn_archive_sizes"
path = "examples/cdn_archive_sizes.rs"

[[example]]
name = "build_file_tree"
path = "examples/build_file_tree.rs"

[package.metadata.cargo-machete]
# These dependencies are used for V1 MIME format support and other features
# getrandom_02 is a renamed dep to enable the "js" feature for getrandom 0.2 on WASM
ignored = ["asn1", "async-trait", "cascette-crypto", "digest", "getrandom_02", "url"]

[lints]
workspace = true
